--- a/project.json
+++ b/project.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "UiPath.Excel.Activities": "[3.2.0-preview]",
     "UiPath.IntelligentOCR.Activities": "[6.26.0]",
+    "UiPath.Mail.Activities": "[2.0.11]",
     "UiPath.OmniPage.Activities": "[1.21.0]",
+    "UiPath.PDF.Activities": "[3.22.1]",
     "UiPath.System.Activities": "[25.6.1]",
     "UiPath.Testing.Activities": "[25.4.0]",
     "UiPath.UIAutomation.Activities": "[25.10.11-preview]",
@@ -96,6 +98,12 @@
     {
       "filePath": "Main.xaml",
       "uniqueId": "7c16c2cf-b473-4da8-89b8-b8bca964d235",
+      "input": [],
+      "output": []
+    },
+    {
+      "filePath": "All_Steps\\Preprocessing\\02_ObtainingNecessaryInformation.xaml",
+      "uniqueId": "491d9ff5-2272-481b-9eec-f7497734bcc1",
       "input": [],
       "output": []
     }
